[package]
name = "so-far-so-good"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum = { version = "0.6.18", features = ["ws", "headers"] }
axum-macros = "0.3.7"
clap = { version = "4.2.7", features = ["derive", "cargo"] }
futures = "0.3.28"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
tokio = { version = "1.28.1", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["json"] }

[build-dependencies]
anyhow = "1.0.71"
vergen = { version = "8.1.3", features = ["cargo", "git", "gitcl"] }

